Project ReConnectMindHealth_Roadmap {
  database_type: "MySQL"
  Note: "ERD Module Lộ trình CBT & Fear Ladder"
}

Enum fear_ladder_bucket {
  EASY
  MEDIUM
  HARD
}

Enum fear_ladder_status {
  LOCKED
  ACTIVE
  MASTERED
}

Enum experiment_source_type {
  SYSTEM
  THERAPIST
}

Enum experiment_status {
  PLANNED
  IN_PROGRESS
  DONE
}

Table patient_profiles {
  user_id uuid [pk]
}

Table quest_templates {
  id uuid [pk]
}

Table patient_quests {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  quest_template_id uuid [ref: > quest_templates.id]
}

Table patient_goals {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
}

Table fear_ladder_items {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  bucket fear_ladder_bucket [not null]
  status fear_ladder_status [not null]
}

Table behavioral_experiments {
  id uuid [pk]
  patient_id uuid [not null, ref: > patient_profiles.user_id]
  fear_ladder_item_id uuid [not null, ref: > fear_ladder_items.id]
  source_type experiment_source_type [not null]
  status experiment_status [not null]
}
